finished swagger API documentation tutorial
